# Ragdoc

./: .env.example  .gitignore  .mcp.json  HYBRID_SEARCH_ACTIVATED.md  HYBRID_SEARCH_GUIDE.md  INSTALLATION.md  LICENSE  MCP_SETUP.md  MCP_TOOLS_GUIDE.md  MEMORY_TUNING.md  METADATA_EXTRACTION_FEATURE.md  RAGDOC_USAGE.md  README.md  RELEASE_NOTES_v1.7.0.md  START_HERE.md  activate_hybrid_search.py  check_db_safe.py  check_indexation_status.py  check_prerequisites.py  chromadb_server_manager.py  delete_chroma.py  environment.yml  fix_hnsw_chroma.py  index_hybrid_collection.py  install_hybrid_search.sh  monitor_indexation.py  plan-multi-collections.md  pyproject.toml  quick_test_hybrid.py  ragdoc-cli.py  ragdoc-menu.py  ragdoc.bat  ragdoc.sh  release_notes_v1.1.0.md  release_notes_v1.2.0.md  release_notes_v1.3.0.md  release_notes_v1.4.0.md  release_notes_v1.5.0.md  requirements.txt  reset_chroma.py  (+11 more)
config/: README.md  chunking.yaml  database.yaml  loader.py  models.yaml
docs/: ADVANCED_TOKENIZATION.md  EVALUATION_GUIDE.md  METADATA_EXTRACTION_GUIDE.md  MIGRATION_CHROMADB_NATIVE.md  WORKFLOW_PDF_TO_SEARCH.md
scripts/: add_metadata_to_markdown.py  compare_tokenization.py  convert_stroeve.py  docling_config.py  generate_test_dataset.py  index_contextualized_adaptive.py  index_contextualized_incremental.py  index_incremental.py  indexing_config.py  llama_parse_config.py  metadata_extractor.py  parse_pdf.py  setup_nltk.py  test_contextualized_incremental.py  test_incremental.py  validate_tokenization_improvement.py
src/: __init__.py  config.py  hybrid_retriever.py  server.py  (+3 more)
(+29 files in other folders)
