[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragdoc"
version = "1.7.0"
description = "Unified MCP server for RAG document search (Hybrid & Contextualized)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Research Assistant", email = "research@example.com"}
]

dependencies = [
    "fastmcp>=0.2.0",
    "chromadb>=0.5.0",
    "voyageai>=0.3.5",
    "cohere>=5.0.0",
    "python-dotenv>=1.0.0",
    "chonkie>=1.4.1",
    "pyyaml>=6.0.0",
    "rank-bm25>=0.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
ragdoc = "src.server:main"
